--- a/proxy-docker/nginx/http_default.conf
+++ b/proxy-docker/nginx/http_default.conf
@@ -39,6 +39,7 @@ server {
 	proxy_set_header Host $host;
 	proxy_set_header X-Forwarded-Host $host;
 	proxy_set_header X-Forwarded-Proto "http";
+	proxy_set_header X-Forwarded-Port 80;
 
 	location / {
 		proxy_pass      http://fusionauth;
